# bts-sentiment-dashboard

./: .env.example  .gitignore  Dockerfile  Dockerfile.frontend  README.md  absa_kaggle.ipynb  absa_pipeline.ipynb  absa_pipeline.py  business_insights.py  clean_aspects.py  dashboard.py  docker-compose.yml  eda.py  nginx.conf  predict.py  pyproject.toml  requirements.txt  train.py
.streamlit/: config.toml
artifacts/: aspects_pred.parquet  nss_by_aspect.csv  nss_daily.csv  nss_overall.txt  results.json  shap_background.parquet
artifacts/reports/: errors_baseline.csv  results.json
backend/: main.py  models.py
backend/routers/: chat.py  data.py  predict.py
backend/services/: business_service.py  data_service.py  error_service.py  explain_service.py  rag_service.py  recommendation_service.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  endpoints.ts  types.ts
frontend/src/components/: ChatBalloon.tsx  InsightCard.tsx  KPIStrip.tsx
frontend/src/hooks/: useApi.ts  useFilters.tsx
frontend/src/lib/: colors.ts  utils.ts
frontend/src/pages/: AspectDetail.tsx  AspectPulse.tsx  BusinessInsights.tsx  Chatbot.tsx  ErrorAnalysis.tsx  LivePredictor.tsx  ModelPerformance.tsx  Overview.tsx  Trends.tsx  VoiceOfCustomer.tsx
src/: __init__.py  aspect_extractor.py  config.py  data.py  evaluate.py  utils.py  visualize.py
src/dashboard/: __init__.py  charts.py  data.py  explain.py  insights.py  theme.py  wordcloud.py
src/models/: __init__.py  baseline.py  transformer.py
(+3 files in other folders)
