[project]
name = "bts-sentiment"
version = "0.1.0"
description = "ABSA sentiment analysis for Bangkok BTS Skytrain reviews"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "transformers",
    "torch",
    "datasets",
    "accelerate>=0.26",
    "tqdm",
    "pyarrow",
    "joblib",
    "wordcloud",
    "imbalanced-learn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
